fix: style: some long texts overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,7 @@ nav a:hover {
 article {
   line-height: 1.6;
   text-align: justify;
+  word-break: break-word;
 }
 
 .time {
